force-app/main/default/objects/Student__c/fields/Day_Of_DOB__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_DOB__c</fullName>
    <formula>TEXT(DAY( Date_Of_Birth__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Of DOB</label>
    <type>Text</type>
</CustomField>