force-app/main/default/objects/Student__c/fields/Month_Of_DOB__c.field-meta.xml
<CustomField>
    <fullName>Month_Of_DOB__c</fullName>
    <formula>TEXT(MONTH(Date_Of_Birth__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Of DOB</label>
    <type>Text</type>
</CustomField>